--- a/JavaScript/LPtest/追加チェック/css/style.css
+++ b/JavaScript/LPtest/追加チェック/css/style.css
@@ -1,141 +1,195 @@
-/* 余計な余白の削除 */
+
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body{
-    margin-top: 20px;
-    margin-bottom: 20px;
+  margin-top: 20px;
 }
 
+
+
+
+
 header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo{
-    margin: 0 auto;
-    margin-left: 50px;
-    align-items: center;
+  margin: 0 auto;
+  margin-left: 50px;
+  align-items: center;
 }
 
 header nav{
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
 header nav ul{
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 header nav ul li a{
-    text-decoration: none;
-    color: black;
-    margin-left: 20px;
+  text-decoration: none;
+  color: black;
+  margin-left: 20px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
 .mainpicture{
-    display: block;
-    width: calc(100% - 100px);
-    margin-right: 50px;
-    margin: 20px 50px 0 50px;
+  display: block;
+  width: calc(100% - 100px);
+  margin-right: 50px;
+  margin: 20px 50px 0 50px;
 }
 
 .section1{
-    margin-top: 20px;
-    text-align: center;
-    font-family: "MS Serif";
-    font-size: 40px;
+  margin-top: 20px;
+  text-align: center;
+  font-family: "MS Serif";
+  font-size: 40px;
 }
 
 .section1-2{
-    margin-top: 20px;
-    text-align: center;
-    font-family: serif;
-    font-weight: 500;
+  margin-top: 20px;
+  text-align: center;
+  font-family: serif;
+  font-weight: 500;
 }
 
 .section1-3{
-    margin-top: 40px;
-    text-align: center;
-    font-family: serif;
-    font-weight: 500;
+  margin-top: 40px;
+  text-align: center;
+  font-family: serif;
+  font-weight: 500;
 }
+
+
+
+
+
 
 
 
 .back {
-    position: relative;
-    width: 100%;  
-    }
+  position: relative;
+  width: 100%;
+}
 
 .backimg {
-    width: 100%;
-    }
-
-.image-container{
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  width: 100%;
 }
 
-div h1{
-    font-size: 50px;
-    font-weight: 100;
-    text-align: center;
+.image-container {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-section div p{
-    text-align: center;
-    font-family: serif;
+div h1 {
+  font-size: 50px;
+  font-weight: 100;
+  text-align: center;
+  margin: 0;
 }
 
-.head2{
-    margin-top: 20px;
-    font-size: 30px;
+section div p {
+  text-align: center;
+  font-family: serif;
 }
 
-.top{
-    display: flex;
+.head2 {
+  margin-top: 20px;
+  font-size: 30px;
+  font-weight: bolder;
 }
 
-.left{
-    width: 50%;
-    margin-left: 50px;
-    margin-top: 50px;
+.top {
+  display: flex;
 }
 
-.bottom{
-    width: 50%;
-    margin-left: 50px;
+.left {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.head3{
-    margin-top: 50px;
-    font-size: 30px;
+.left p{
+  width: 70%;
+  text-align: left;
+  line-height: 2.5;
 }
 
-.sec2{
-    display: flex;
+.right{
+  text-align: center;
 }
 
-.left2{
-    width: 50%;
-    margin-left: 50px;
+.right img{
+  display: block;
+  width: 80%;
+  margin: 0 auto;
 }
 
-.left2 p{
-    margin-top: 200px;
+.bottom {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.right2{
-    margin-top: 20px;
+.bottom p{
+  width: 70%;
+  text-align: left;
+  line-height: 2.5;
+}
+
+.head3 {
+  margin-top: 50px;
+  font-size: 30px;
+}
+
+.sec2 {
+  display: flex;
+}
+
+.left2 {
+  width: 50%;
+  margin-left: 50px;
+}
+
+.left2 p {
+  margin-top: 200px;
+  margin-right: 50px;
+  text-align: left;
+  line-height: 2.5;
+}
+
+.right2 {
+  width: 50%;
+  margin-top: 20px;
+}
+
+.right2 img{
+  margin-top: 20px;
 }
 
 
@@ -143,14 +197,15 @@ section div p{
 
 
 .section3 p{
-    text-align: center;
-    font-size: 40px;
-    font-family: serif;
+  text-align: center;
+  margin-bottom: 100px;
+  font-size: 40px;
+  font-family: serif;
 }
 
 .section3 strong{
-    font-size: 70px;
-    font-family: serif;
+  font-size: 70px;
+  font-family: serif;
 }
 
 
@@ -158,116 +213,388 @@ section div p{
 
 
 .container {
-    display: flex;
-    justify-content: center;
-  }
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
   
-  .container h2{
-    text-align: center;
-  }
+.container h2{
+  text-align: center;
+}
 
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .col-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-    box-sizing: border-box;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  
-  .block {
-    margin-bottom: 50px;
-  }
-  
-  .block:last-child {
-    margin-bottom: 0;
-  }
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-  .block h2 {
-    font-size: 30px;
-    font-weight: normal;
-    margin-bottom: 10px;
-    font-family: Century;
-  }
 
-  .block1 h2 {
-    font-size: 30px;
-    font-weight: normal;
-    margin-bottom: 10px;
-    font-family: Century;
-  }
+.block {
+  width: 50%;
+  margin-bottom: 50px;
+  position: relative;
+}
 
-  .block2 h2 {
-    font-size: 30px;
-    font-weight: normal;
-    margin-bottom: 10px;
-    font-family: Century;
-  }
-  
-  .block p {
-    font-size: 14px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-  }
-  
-  .block1 p {
-    font-size: 14px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-  }
+.block:last-child {
+  margin-bottom: 0;
+}
 
-  .block2 p {
-    font-size: 14px;
-    line-height: 1.5;
-    margin-bottom: 20px;
-  }
+.block h2 {
+  position: relative;
+  font-size: 30px;
+  font-weight: normal;
+  margin-bottom: 10px;
+  font-family: Century;
+  text-align: center;
+}
 
-  .block h3{
-    text-align: center;
-    margin-top: 10px;
-  }
-  
-  .block1 h3{
-    text-align: center;
-    margin-top: 40px;
-  }
+.block p {
+  width: 70%;
+  margin: 0 auto;
+  font-size: 14px;
+  line-height: 2.5;
+  font-weight: 1000;
+  text-indent: 0;
+  margin-bottom: 20px;
+  text-align: left;
+}
 
-  .block2 h3{
-    text-align: center;
-  }
+.block h3{
+  text-align: center;
+  margin-top: 10px;
+}
 
-  .block2 h2{
-    text-align: center;
-    margin-top: 50px;
-  }
 
-  .block2 p{
-    margin-top: 56px;
-  }
-  
-  .block img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .block1 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
+.block img {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
 
-  .block2 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
+.bg2p{
+  height: 105px;
+}
+
+.bg1::after {
+  content: url(/images/ヒト.png);
+  display: block;
+  position: absolute;
+  right: 20%;
+  top: -180%;
+}
+
+.bg2::after {
+  content: url(/images/クツ.png);
+  display: block;
+  position: absolute;
+  right: 10%;
+  top: -50%;
+}
+
+.bg3::after {
+  content: url(/images/ミズ.png);
+  display: block;
+  position: absolute;
+  right: 20%;
+  top: -200%;
+}
+
+.bg4::after {
+  content: url(/images/カバン.png);
+  display: block;
+  position: absolute;
+  right: 15%;
+  top: -200%;
+}
   
 
 
 
 
+
+
+
+.container1{
+  position: relative;
+  width: 100%;
+  padding-top: 100px;
+}
+
+.conimg {
+  width: 100%;
+}
+  
+
+.boxs{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-top: 500px;
+}
+
+.boxs p{
+  padding-bottom: 100px;
+}
+
+
+.box {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 50px;
+}
+
+.container1 h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.box p {
+  font-size: 16px;
+  margin: 0;
+  text-align: left;
+}
+
+.box img{
+  max-width: 50%;
+  text-align: left;
+}
+
+.boxleft{
+  max-width: 50%;
+}
+
+
+
+  
+
+.sec5title p{
+  margin-bottom: 50px;
+}
+
+
+
+.container2{
+  max-width: 100%;
+}
+
+.container2 h2{
+  margin-bottom: 10px;
+}
+
+form{
+  display: inline-block;
+  text-align: left;
+}
+
+
+form input,
+form select,
+form textarea {
+  box-sizing: border-box;
+  padding: 5px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  text-align: right;
+}
+
+.formcontrol{
+  text-align: right;
+}
+
+
+.p1{
+  margin-bottom: 10px;
+}
+
+.contop{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.conleft{
+  width: 50%;
+  text-align: center;
+}
+
+.conright{
+  width: 50%;
+  text-align: center;
+}
+
+.pbox{
+  width: 448px;
+  height: 300px;
+  margin: 0 auto;
+
+}
+
+.pbox p{
+  width: 100%;
+  height: 100%;
+  text-align: left;
+}
+
+
+
+
+
+.btnonline {
+  border: 2px solid black;
+  color: black;
+  font-size: x-large;
+  background-color: white;
+  padding: 10px 20px;
+  transition: all 0.3s ease;
+  width: 448px;
+  height: 50px;
+}
+
+.btnonline:hover {
+  background-color: black;
+  color: white;
+}
+
+
+.conbottom{
+  text-align: center;
+  padding-top: 100px;
+}
+
+
+
+
+
+.sec5{
+  text-align: center;
+}
+
+.faqp{
+  font-size: 40px;
+  font-family: monospace;
+}
+
+.faqp strong{
+  font-size: 70px;
+}
+
+.sec6{
+  margin: 100px 50px;
+}
+
+.sec6 h2{
+  background-color: gainsboro;
+  font-weight: 500;
+}
+
+.fqblock{
+  text-align: left;
+}
+
+.fqblock p{
+  text-align: left;
+  line-height: 2;
+  margin: 10px 0 30px 0;
+}
+
+
+
+
+
+.container0 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.sec7img{
+  width: 20%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+
+
+.fbox2{
+  background-color: gainsboro;
+}
+
+.fbox{
+  padding-top: 200px;
+}
+
+.fp {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+
+
+.fp p{
+  padding: 0 50px 20px 50px;
+}
+
+.fp h1{
+  text-align: left;
+  font-size: 30px;
+  padding: 20px 50px;
+}
+
+.tpr{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.textbox {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.ins{
+  margin-right: 20px;
+  width: 150px;
+  height: 30px;
+  background-color: black;
+  display: flex;
+  color: white;
+  border-radius: 5px;
+}
+
+
+
+.ins p{
+  padding: 0;
+  text-align: left;
+  margin: auto;
+}
+
+.twi{
+  margin-right: 20px;
+  width: 150px;
+  height: 30px;
+  background-color: #00acee;
+  display: flex;
+  color: white;
+  border-radius: 5px;
+}
+
+.twi img{
+  margin-left: 5px;
+}
+
+.twi p{
+  padding: 0;
+  text-align: left;
+  margin: auto;
+}
